# dpdk-stable

./: MAINTAINERS  README  VERSION  meson.build
app/: Makefile  meson.build
app/pdump/: main.c
app/proc-info/: main.c
app/proc_info/: main.c
app/test/: meson.build  test.c  test_atomic.c  test_barrier.c  test_bpf.c  test_common.c  test_compressdev.c  test_cryptodev.c  test_distributor_perf.c  test_eal_flags.c  (+20 more)
app/test-compress-perf/: main.c
app/test-crypto-perf/: cperf_options_parsing.c  cperf_test_latency.c  cperf_test_verify.c  main.c  meson.build
app/test-eventdev/: evt_options.c  meson.build  test_pipeline_atq.c  test_pipeline_common.c  test_pipeline_queue.c
app/test-pmd/: Makefile  cmdline.c  cmdline_flow.c  cmdline_mtr.c  cmdline_tm.c  config.c  csumonly.c  flowgen.c  macswap.c  meson.build  parameters.c  testpmd.c  testpmd.h  txonly.c  util.c
buildtools/: check-experimental-syms.sh  meson.build
config/: common_base  common_linuxapp  defconfig_arm-armv7a-linuxapp-gcc  defconfig_arm64-armv8a-linuxapp-gcc  meson.build  rte_config.h
devtools/: check-git-log.sh  check-symbol-change.sh  checkpatches.sh
doc/: build-sdk-meson.txt
drivers/: meson.build
drivers/crypto/dpaa2_sec/: Makefile  dpaa2_sec_dpseci.c  meson.build
drivers/crypto/dpaa2_sec/hw/: desc.h
drivers/crypto/dpaa_sec/: Makefile  dpaa_sec.c  meson.build
examples/: meson.build
mk/: rte.app.mk  rte.cpuflags.mk  rte.lib.mk  rte.sdkdoc.mk  rte.sdkinstall.mk
pkg/: dpdk.spec
tools/: dpdk-devbind.py
usertools/: dpdk-devbind.py  dpdk-pmdinfo.py  dpdk-telemetry-client.py
(+855 files in other folders)
